# metrix

./: .gitignore  CLAUDE.md  Makefile  example.py  pyproject.toml
src/metrix/: historical_data_provider.py
tests/metrix/: conftest.py  test_historical_data_provider.py  test_init.py  test_main.py
